using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace SystemsAnalysis_Restaurant
{
    public class Customer
    {
        public void BrowseMenu()
        {

        }
        public void SelectTable()
        {

        }
        public void OrderFood()
        {

        }
        public void Pay()
        {

        }
    }
}
